Fixed "Combined fragment has incomplete color settings".

BUG: 321260